--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit\ShrinkTests.cs" />
+    <Compile Include="Unit\CouchProxyTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
