Started implementing first feature.  The need for creating databases through an API call.

--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\CouchInstanceTests.cs" />
     <Compile Include="Unit\ProxyTests.cs" />
   </ItemGroup>
   <ItemGroup>
