--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -37,6 +37,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CouchInstance.cs" />
+    <Compile Include="CouchFactory.cs" />
+    <Compile Include="ICouchInstance.cs" />
+    <Compile Include="IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy.cs" />
   </ItemGroup>
