--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -37,12 +37,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CannotCreateDatabaseException.cs" />
+    <Compile Include="CouchError.cs" />
     <Compile Include="CouchInstance.cs" />
     <Compile Include="CouchFactory.cs" />
+    <Compile Include="ICouchError.cs" />
     <Compile Include="ICouchInstance.cs" />
-    <Compile Include="IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
+    <Compile Include="Proxies\IRestProxy.cs" />
+    <Compile Include="Proxies\IWebResponse.cs" />
+    <Compile Include="Proxies\RestProxy.cs" />
+    <Compile Include="Serializers\ISerializer.cs" />
+    <Compile Include="Serializers\JsonSerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
