--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -44,9 +44,14 @@
     <Compile Include="ICouchError.cs" />
     <Compile Include="ICouchInstance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proxies\HttpClient.cs" />
+    <Compile Include="Proxies\HttpResponse.cs" />
+    <Compile Include="Proxies\IHttpClient.cs" />
     <Compile Include="Proxies\IRestProxy.cs" />
-    <Compile Include="Proxies\IWebResponse.cs" />
+    <Compile Include="Proxies\IHttpRequest.cs" />
+    <Compile Include="Proxies\IHttpResponse.cs" />
     <Compile Include="Proxies\RestProxy.cs" />
+    <Compile Include="Proxies\HttpRequest.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Serializers\JsonSerializer.cs" />
   </ItemGroup>
