Added the ability to delete databases by name.  Also numerous test refactorings for RowTest.

--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CannotCreateDatabaseException.cs" />
+    <Compile Include="CannotDeleteDatabaseException.cs" />
     <Compile Include="CouchError.cs" />
     <Compile Include="CouchInstance.cs" />
     <Compile Include="CouchFactory.cs" />
