--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CannotGetDatabaseException.cs" />
     <Compile Include="CouchDatabase.cs" />
     <Compile Include="CouchError.cs" />
+    <Compile Include="CouchException.cs" />
     <Compile Include="CouchInstance.cs" />
     <Compile Include="CouchFactory.cs" />
     <Compile Include="ICouchDatabase.cs" />
