--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -58,9 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit\CouchDatabaseTests.cs" />
-    <Compile Include="Unit\CouchInstanceTests.cs" />
-    <Compile Include="Unit\Proxies\RestProxyTests.cs" />
+    <Compile Include="Unit\DatabaseTests.cs" />
+    <Compile Include="Unit\ServerTests.cs" />
+    <Compile Include="Unit\Proxy\RestProxyTests.cs" />
     <Compile Include="Unit\Serializers\JsonSerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
