--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -44,23 +44,23 @@
     <Compile Include="CannotCreateDatabaseException.cs" />
     <Compile Include="CannotDeleteDatabaseException.cs" />
     <Compile Include="CannotGetDatabaseException.cs" />
-    <Compile Include="CouchDatabase.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="CouchError.cs" />
     <Compile Include="CouchException.cs" />
-    <Compile Include="CouchInstance.cs" />
-    <Compile Include="CouchFactory.cs" />
-    <Compile Include="ICouchDatabase.cs" />
+    <Compile Include="Server.cs" />
+    <Compile Include="ServerFactory.cs" />
+    <Compile Include="IDatabase.cs" />
     <Compile Include="ICouchError.cs" />
-    <Compile Include="ICouchInstance.cs" />
+    <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxies\HttpClient.cs" />
-    <Compile Include="Proxies\HttpResponse.cs" />
-    <Compile Include="Proxies\IHttpClient.cs" />
-    <Compile Include="Proxies\IRestProxy.cs" />
-    <Compile Include="Proxies\IHttpRequest.cs" />
-    <Compile Include="Proxies\IHttpResponse.cs" />
-    <Compile Include="Proxies\RestProxy.cs" />
-    <Compile Include="Proxies\HttpRequest.cs" />
+    <Compile Include="Proxy\HttpClient.cs" />
+    <Compile Include="Proxy\HttpResponse.cs" />
+    <Compile Include="Proxy\IHttpClient.cs" />
+    <Compile Include="Proxy\IRestProxy.cs" />
+    <Compile Include="Proxy\IHttpRequest.cs" />
+    <Compile Include="Proxy\IHttpResponse.cs" />
+    <Compile Include="Proxy\RestProxy.cs" />
+    <Compile Include="Proxy\HttpRequest.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Serializers\JsonSerializer.cs" />
   </ItemGroup>
