--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Database.cs" />
     <Compile Include="CouchError.cs" />
     <Compile Include="CouchException.cs" />
+    <Compile Include="IServerInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerFactory.cs" />
     <Compile Include="IDatabase.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Proxy\HttpRequest.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Serializers\JsonSerializer.cs" />
+    <Compile Include="ServerInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
