Refactored the way a database is retrieved from the server.  Abstracted the info away in another class and referenced it inside of Database.

--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Database.cs" />
     <Compile Include="CouchError.cs" />
     <Compile Include="CouchException.cs" />
+    <Compile Include="DatabaseInfo.cs" />
+    <Compile Include="IDatabaseInfo.cs" />
     <Compile Include="IServerInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerFactory.cs" />
