Created our own class for HttpMethods, I.E. POST, GET, PUT, DELETE, ETC...  Will add more as needed.

--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="IDatabaseInfo.cs" />
     <Compile Include="IServerInfo.cs" />
+    <Compile Include="Proxy\HttpMethod.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerFactory.cs" />
     <Compile Include="IDatabase.cs" />
