Added feature to create documents.  View the README on how it works and how to use it.  Please pardon the tests, I plan on refactoring them soon, to make them more readable.

--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -58,6 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleDomain\Address.cs" />
+    <Compile Include="SampleDomain\Employee.cs" />
+    <Compile Include="SampleDomain\Manager.cs" />
+    <Compile Include="SampleDomain\Worker.cs" />
     <Compile Include="Unit\DatabaseTests.cs" />
     <Compile Include="Unit\ServerTests.cs" />
     <Compile Include="Unit\Proxy\RestProxyTests.cs" />
