--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5603262A-08E6-4203-8CB3-001F9446F054}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -39,6 +39,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CannotCreateDatabaseException.cs" />
@@ -49,6 +51,9 @@
     <Compile Include="CouchException.cs" />
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
+    <Compile Include="Generators\GUIDGenerator.cs" />
+    <Compile Include="Generators\HiLoGenerator.cs" />
+    <Compile Include="Generators\IGenerator.cs" />
     <Compile Include="IDatabaseInfo.cs" />
     <Compile Include="IDocument.cs" />
     <Compile Include="IServerInfo.cs" />
