--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -51,7 +51,7 @@
     <Compile Include="CouchException.cs" />
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
-    <Compile Include="Generators\GUIDGenerator.cs" />
+    <Compile Include="Generators\GuidGenerator.cs" />
     <Compile Include="Generators\HiLoGenerator.cs" />
     <Compile Include="Generators\IGenerator.cs" />
     <Compile Include="IDatabaseInfo.cs" />
