--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -52,7 +52,7 @@
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Generators\GuidGenerator.cs" />
-    <Compile Include="Generators\HiLoGenerator.cs" />
+    <Compile Include="Generators\SeededLongGenerator.cs" />
     <Compile Include="Generators\IGenerator.cs" />
     <Compile Include="IDatabaseInfo.cs" />
     <Compile Include="IDocument.cs" />
