--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5603262A-08E6-4203-8CB3-001F9446F054}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -43,12 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CannotCreateDatabaseException.cs" />
-    <Compile Include="CannotDeleteDatabaseException.cs" />
-    <Compile Include="CannotGetDatabaseException.cs" />
+    <Compile Include="Exceptions\CannotCreateDatabaseException.cs" />
+    <Compile Include="Exceptions\CannotDeleteDatabaseException.cs" />
+    <Compile Include="Exceptions\CannotGetDatabaseException.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="CouchError.cs" />
-    <Compile Include="CouchException.cs" />
+    <Compile Include="Exceptions\CouchException.cs" />
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Generators\GuidGenerator.cs" />
