Added a RandomLongIntegerGenrator and a RandomIntegerGenerator which include a propery to toggle negative number creation on and off. The RandomLongIntegerGenerator is intended to replace the somewhat silly SeededLongGenerator.

--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -66,6 +66,8 @@
     <Compile Include="SampleDomain\Worker.cs" />
     <Compile Include="Unit\DatabaseTests.cs" />
     <Compile Include="Unit\Generators\GuidGeneratorTests.cs" />
+    <Compile Include="Unit\Generators\RandomIntegerGeneratorTests.cs" />
+    <Compile Include="Unit\Generators\RandomLongIntegerGeneratorTests.cs" />
     <Compile Include="Unit\Generators\SeededLongGeneratorTests.cs" />
     <Compile Include="Unit\ServerTests.cs" />
     <Compile Include="Unit\Proxy\RestProxyTests.cs" />
