--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -52,6 +52,8 @@
     <Compile Include="DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Generators\GuidGenerator.cs" />
+    <Compile Include="Generators\RandomIntegerGenerator.cs" />
+    <Compile Include="Generators\RandomLongIntegerGenerator.cs" />
     <Compile Include="Generators\SeededLongGenerator.cs" />
     <Compile Include="Generators\IGenerator.cs" />
     <Compile Include="IDatabaseInfo.cs" />
