--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Unit\Generators\GuidGeneratorTests.cs" />
     <Compile Include="Unit\Generators\SeededLongGeneratorTests.cs" />
     <Compile Include="Unit\ServerTests.cs" />
-    <Compile Include="Unit\Proxy\RestProxyTests.cs" />
+    <Compile Include="Unit\Proxy\RestClientTests.cs" />
     <Compile Include="Unit\Serializers\JsonSerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
