--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -47,23 +47,23 @@
     <Compile Include="Exceptions\CannotDeleteDatabaseException.cs" />
     <Compile Include="Exceptions\CannotGetDatabaseException.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="CouchError.cs" />
+    <Compile Include="Model\ErrorInfo.cs" />
     <Compile Include="Exceptions\CouchException.cs" />
-    <Compile Include="DatabaseInfo.cs" />
+    <Compile Include="Model\DatabaseInfo.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Generators\GuidGenerator.cs" />
     <Compile Include="Generators\RandomIntegerGenerator.cs" />
     <Compile Include="Generators\RandomLongIntegerGenerator.cs" />
     <Compile Include="Generators\SeededLongGenerator.cs" />
     <Compile Include="Generators\IGenerator.cs" />
-    <Compile Include="IDatabaseInfo.cs" />
+    <Compile Include="Model\IDatabaseInfo.cs" />
     <Compile Include="IDocument.cs" />
-    <Compile Include="IServerInfo.cs" />
+    <Compile Include="Model\IServerInfo.cs" />
     <Compile Include="Proxy\HttpMethod.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerFactory.cs" />
     <Compile Include="IDatabase.cs" />
-    <Compile Include="ICouchError.cs" />
+    <Compile Include="Model\IErrorInfo.cs" />
     <Compile Include="IServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\HttpClient.cs" />
@@ -76,7 +76,7 @@
     <Compile Include="Proxy\HttpRequest.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Serializers\JsonSerializer.cs" />
-    <Compile Include="ServerInfo.cs" />
+    <Compile Include="Model\ServerInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
