Added integration tests.  Please be sure to read the README as the tasks to run the tests have changed.  Right now, we only have integration tests for the Server class.  We need to implement DeleteDocument, before we can create integration tests for the Database class.  The Server integration tests found a couple of issues also, which I fixed.

--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Integration\Constants.cs" />
+    <Compile Include="Integration\ServerTests.cs" />
     <Compile Include="OttomanSpecBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleDomain\Address.cs" />
