Refactored the tests some and did some cleanup.

--- a/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
+++ b/src/SineSignal.Ottoman.Tests/SineSignal.Ottoman.Tests.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Unit\Generators\SeededLongGeneratorTests.cs" />
     <Compile Include="Unit\ServerTests.cs" />
     <Compile Include="Unit\Proxy\RestClientTests.cs" />
-    <Compile Include="Unit\Serializers\JsonSerializerTests.cs" />
+    <Compile Include="Integration\Serializers\JsonSerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SineSignal.Ottoman\SineSignal.Ottoman.csproj">
