--- a/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
+++ b/src/SineSignal.Ottoman/SineSignal.Ottoman.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5603262A-08E6-4203-8CB3-001F9446F054}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -50,6 +50,8 @@
     <Compile Include="Exceptions\CannotDeleteDatabaseException.cs" />
     <Compile Include="Exceptions\CannotGetDatabaseException.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Generators\IDGenerator.cs" />
+    <Compile Include="Generators\IIDGenerator.cs" />
     <Compile Include="Generators\RandomIntegerGenerator.cs" />
     <Compile Include="Generators\RandomLongIntegerGenerator.cs" />
     <Compile Include="Generators\SeededLongGenerator.cs" />
